src/objects/Training_Status_Snapshot__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <label>Account Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivered_By__c</fullName>
        <label>Delivered By</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Execution_Time__c</fullName>
        <label>Execution Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory_Owner_Team_Group_Buckets__c</fullName>
        <label>Territory Owner Team (Group Buckets)</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Bookings__c</fullName>
        <label>Total Bookings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Training Status Snapshot</label>
    <nameField>
        <label>Training Status Snapshot Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Training Status Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>